Fixed list overflow

--- a/src/frontend/src/renderer/src/components/NavigationBar.css
+++ b/src/frontend/src/renderer/src/components/NavigationBar.css
@@ -5,3 +5,9 @@
 .hover-btn {
   opacity: 0.5;
 }
+
+.dropdown .dropdown-menu {
+  max-height: 80vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
